Update versions and add example of POST with form-data file